tests/snapshots/parser_error_fixtures/missing_class_body_brace.snap
---
source: tests/error_fixtures/parser_error_fixtures_snapshots.rs
---
Fixture: examples/parser_errors/missing_class_body_brace.flx
== compile ==
failed (parse)
== diagnostics ==
error[E034]: Missing Class Body

Expected `{` to begin class body.

  examples/parser_errors/missing_class_body_brace.flx:8:5
  |
8 |     fn show(x: a) -> String
  |     ^^

Hint:
  Class declarations use `class Name<a> { fn method(x: a) -> ReturnType }`.


error[E034]: Missing Function Body

This function body needs to start with `{`.

  examples/parser_errors/missing_class_body_brace.flx:10:1
   |
 8 |     fn show(x: a) -> String
   |     - `show` starts here
 9 | 
10 | fn main() {
   | ^^
   | -- This looks like the function body

Note:
  while parsing function `show`

Help:
  Try adding `{` after the function signature.

Found 2 errors.
== stdout ==
<not executed>
