tests/snapshots/parser_error_fixtures/missing_effect_op_colon.snap
---
source: tests/parser_error_fixtures_snapshots.rs
---
Fixture: examples/parser_errors/missing_effect_op_colon.flx
== compile ==
failed (parse)
== diagnostics ==
Error[E034]: Missing Effect Operation Colon

Missing `:` in effect operation signature. Write it as `op: Type -> Return`.

  examples/parser_errors/missing_effect_op_colon.flx:2:11
  |
2 |     print String -> Unit
  |           ^^^^^^

Note:
  while parsing effect `Console`
== stdout ==
<not executed>
