tests/snapshots/parser_error_fixtures/missing_fn_generic_param.snap
---
source: tests/parser_error_fixtures_snapshots.rs
assertion_line: 26
---
Fixture: examples/parser_errors/missing_fn_generic_param.flx
== compile ==
failed (parse)
== diagnostics ==
Error[E034]: Missing Generic Parameter Name

Expected generic type parameter name.

  examples/parser_errors/missing_fn_generic_param.flx:1:13
  |
1 | fn identity<(x: Int) -> Int {
  |             ^

Hint:
  Generic parameters use `fn name<T, U>(...) { ... }`.

Note:
  while parsing function `identity`


Error[E031]: Expected Expression

Expected expression, found `->`.

  examples/parser_errors/missing_fn_generic_param.flx:1:22
  |
1 | fn identity<(x: Int) -> Int {
  |                      ^^

Found 2 errors.
== stdout ==
<not executed>
